--- a/webPage/assets/styles/_grid.scss
+++ b/webPage/assets/styles/_grid.scss
@@ -1,3 +1,8 @@
+.block-p{
+	position: absolute;
+	bottom: 20px;
+	color:#fff;
+}
 
 @media(max-width:1200px){
 	.project-section .base-section .container-fluid{
@@ -15,18 +20,22 @@
 			margin-left:15px;
 		}
 	}
+}
 
-
+@media(max-width:1240px){
+	.project-section .icon-con .box-1 .icon-h1 h1 {
+			font-size: 36px;
+	}
 }
 
 @media(max-width:1010px){
 	.first-section .base-section .container{
 		width: 99%;
-	.project-section .icon-con .box-1 .icon-h1 h1 {
-			font-size: 36px;
-		}
 	}
 }
+
+
+
 @media (max-width:991px){
 	.project-section .icon-con .box-1 .icon-h1{
 		padding-bottom: 80%;
@@ -75,13 +84,9 @@
 // FULL SCALE DOWN
 
 @media(max-width:765px){
-	.showcase , .block{
+	.showcase , .block, .main-header, 	.project-section{
 		display:none;
 	}
-	.project-section{
-		display: none;
-	}
-
 	.b-nav{
 		.container-flex{
 			display: flex;
@@ -89,9 +94,38 @@
 			flex-direction: column;
 			justify-content: center;
 			align-items: center;
+			.nav-left .flex-box {
+				div#p {
+					margin: 0px 0px 0px 0px;
+					padding-bottom: 15px;
+				}
+				.box-1 {
+				 display: flex;
+				 justify-content: center;
+				 align-items: center;
+				 margin: 15px 0px 0px 80px;
+				 margin:0px;
+					.navbar-brand {
+						padding-top:20px;
+					}
+				}
+			}
+			.box-2 {
+				padding: 20px;
+			}
 		}
-		 .nav-left .flex-box .box-1 {
-			margin:0px;
 	}
+	.first-section{
+		.base-section .container-flex-fluid {
+			width: 93%;
+				h3{
+					font-size: 17px;
+					line-height: 28px;
+					margin-top:68px;
+				}
+		}
 	}
 }
+
+
+
